fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/Invoiced_Sales_Tracking__c.object-meta.xml
<CustomObject>
    <label>Invoiced Sales Tracking</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoiced Sales Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoiced Sales Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>