fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Delivery_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Line_Number__c</fullName>
    <label>Delivery Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>