fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Number__c</fullName>
    <label>Delivery Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>