fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Delivery_Priority_2_Digit__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Priority_2_Digit__c</fullName>
    <label>Delivery Priority (2 Digit)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>