fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/External_Handling_Unit_Identification__c.field-meta.xml
<CustomField>
    <fullName>External_Handling_Unit_Identification__c</fullName>
    <label>External Handling Unit Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>