fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>