fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <length>4</length>
    <type>Text</type>
</CustomField>