fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Quantity_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Shipped__c</fullName>
    <label>Quantity Shipped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>