fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Sales_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Key__c</fullName>
    <externalId>true</externalId>
    <label>Sales Order Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>