fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Sales_Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Line_Number__c</fullName>
    <label>Sales Order Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>