fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/Sample_Request_Key__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Key__c</fullName>
    <formula>Material_Name__c &amp; &quot;-&quot; &amp; PO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Request Key</label>
    <type>Text</type>
</CustomField>