fullSandbox11072023/force-app/main/default/objects/Invoiced_Sales_Tracking__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>3</length>
    <type>Text</type>
</CustomField>